# MyClusterChatServer

./: CMakeLists.txt  README.md  auto_build.sh
include/: public.hpp
include/client/: nohead.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: connection.hpp  connectionpool.hpp  dbpublic.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: connection.cpp  connectionpool.cpp  connmysql.cnf
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usermodel.cpp
src/server/redis/: redis.cpp
test/testjson/: testjson  testjson.cpp
test/testmuduo/: CMakeLists.txt  muduo_server.cpp
